# sentiment-analyzer-inc

./: .env  .env_example  .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  setup.sh  test.py  test_pipeline.py
backend/app/: main.py  model.py  predict.py  schemas.py
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
client/src/: App.css  App.jsx
eda/: augment_translation.ipynb  cleaning.ipynb  cleaning_extract.ipynb  eda.ipynb  pipeline_cleaning_raw_data.ipynb
eda/data/: youtube_comments_ultra_realistic_6096.csv  youtube_dataset_checking.csv  youtube_metadata_-4GmbBoYQjE.csv
etl/: youtube_extraction.py
etl/data/: youtube_metadata_-4GmbBoYQjE.csv  youtube_metadata_8r_mq50JNho.csv  youtube_metadata_DRWnOlFS-X0.csv  youtube_metadata_hp2QZ0BGaps.csv  youtube_metadata_shXNfU4aCjc.csv  youtube_metadata_wQtb_NgXBUE.csv
model_training/: modelos_clasicos.ipynb
model_training/bilstm/: README.md  bilstm-monotoxic.ipynb  bilstm.ipynb  bilstm_multitoxic_extended.ipynb  pytorch_data_prepared.pth
model_training/xlm-roberta-base/: extraction.ipynb  xlm-roberta-base.ipynb
models/: best_model_svm.pkl
models/bilstm_advanced/: Integrity_test.py  bilstm.md  config.json  features_data.pkl  model_parameter_test.py  multitoxic_v1.0_20250708_181744_config.json  multitoxic_v1.0_20250708_181744_features.pkl  multitoxic_v1.0_20250708_181744_loader.py  (+8 more)
server/: Dockerfile  main.py  requirements.txt  schemas.py
test/: conftest.py  test_integration.py  test_unit.py
(+31 files in other folders)
